src/test/compile-fail/type-recursive.rs
// error-pattern:illegal recursive type
type t1 = rec(int foo, t1 foolish);

fn main() {}
